// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider bg prop sets background-color 1`] = `
.c1 {
  margin-left: 0px;
  margin-right: 0px;
  background-color: #7280ed;
}

.c0 {
  height: 3px;
  border: 0;
  background-color: #7280ed;
}

<hr
  className="c0 c1"
  height="3px"
/>
`;

exports[`Divider borderColor prop sets background-color 1`] = `
.c1 {
  margin-left: 0px;
  margin-right: 0px;
}

.c0 {
  height: 3px;
  border: 0;
  background-color: #7280ed;
}

<hr
  className="c0 c1"
  height="3px"
/>
`;

exports[`Divider color prop sets background-color 1`] = `
.c1 {
  margin-left: 0px;
  margin-right: 0px;
  color: #7280ed;
}

.c0 {
  height: 3px;
  border: 0;
  background-color: #7280ed;
}

<hr
  className="c0 c1"
  color="accent"
  height="3px"
/>
`;

exports[`Divider height prop 1`] = `
.c1 {
  margin-left: 0px;
  margin-right: 0px;
}

.c0 {
  height: 4px;
  border: 0;
  background-color: #dde1e4;
}

<hr
  className="c0 c1"
  height="4px"
/>
`;

exports[`Divider renders 1`] = `
.c1 {
  margin-left: 0px;
  margin-right: 0px;
}

.c0 {
  height: 3px;
  border: 0;
  background-color: #dde1e4;
}

<hr
  className="c0 c1"
  height="3px"
/>
`;
